2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Added support to set the session ID using a GET parameter in the url

2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/applestreamer.xml:
	Added 'session-timeout' and 'secret-key' properties

2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/applestreamer.xml:
	* flumotion/component/consumers/applestreamer/hlsring.py:
	Added 'stream-bitrate' property

2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/applestreamer.xml:
	* flumotion/component/consumers/applestreamer/hlsring.py:
	Added property to autoupdate the playlist when a new fragment
	is missing and manage discontinuities

2010-02-10  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/mpegts/mpegts.py:
	Uses incomming buffers' offset to calculate the buffer offset
	of outgoing keyframes. Allows synchronizing several streams
	with a common upstream element, usually the flow's source

2010-02-10  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/hlsring.py:
	Get the media sequence from the last fragment in the playlist
	and save the sequence number rather than the segment name.

2010-02-04  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed by: Andoni Morales Alastruey

	* flumotion/component/consumers/applestreamer/resources.py:
	Set "Keep-Alive" for playlist, it can increase by 2 the number of
	request processed. However, it needs a good reactor that can