@@ -1,5 +1,13 @@
 2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>
 
+	* flumotion/component/consumers/applestreamer/common.py:
+	* flumotion/component/consumers/applestreamer/hlsring.py:
+	* flumotion/component/consumers/applestreamer/resources.py:
+	Raise a FragmentNotAvailable exception to log properly requests
+	to dummy fragments automatically added to the playlist
+
+2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>
+
 	* flumotion/component/consumers/applestreamer/resources.py:
 	Added support to set the session ID using a GET parameter in the url
 
